Name:               hatt
Version:            0.1
Synopsis:           A truth-table generator for classical propositional logic.
Description:        Hatt is a command-line program which prints truth tables
                    for expressions in classical propositional logic, and a
                    library allowing its parser, evaluator and truth-table
                    generator to be used in other programs.
License:            BSD3
License-file:       LICENSE
Author:             Benedict Eastaugh
Maintainer:         benedict@eastaugh.net
Copyright:          (c) 2011 Benedict Eastaugh
Category:           Logic
Build-type:         Simple
Extra-source-files: README.md
Cabal-version:      >=1.2
                    
Library             
  Exposed-modules:  Logic.Propositional
  Build-depends:    base       >= 4.2 && < 4.3,
                    containers >= 0.3 && < 0.4,
                    parsec     >= 2.1 && < 2.2
  Hs-Source-Dirs:   src
                    
Executable hatt
  Build-depends:    base       >= 4.2 && < 4.3,
                    containers >= 0.3 && < 0.4,
                    parsec     >= 2.1 && < 2.2
  Hs-Source-Dirs:   src
  Main-Is:          hatt.hs
