Name:               hatt
Version:            1.4.0.1

Synopsis:           A truth table generator for classical propositional logic.
Description:        Hatt is a command-line program which prints truth tables
                    for expressions in classical propositional logic, and a
                    library allowing its parser, evaluator and truth table
                    generator to be used in other programs.
License:            BSD3
License-file:       LICENSE
Author:             Benedict Eastaugh
Maintainer:         benedict@eastaugh.net
Copyright:          (c) 2011 Benedict Eastaugh
Homepage:           http://extralogical.net/projects/hatt
Category:           Logic
Cabal-version:      >= 1.6

Build-type:         Simple
Extra-source-files: README.md

Source-repository head
  Type:             git
  Location:         git://github.com/beastaugh/hatt.git

Library
  Hs-Source-Dirs:   src
  GHC-options:      -Wall
  Build-depends:    base           >= 4 && < 5,
                    containers     >= 0.3 && < 0.5,
                    parsec         >= 2.1 && < 2.2,
                    ansi-wl-pprint >= 0.6 && < 0.7
  Exposed-modules:  Data.Logic.Propositional
  Other-modules:    Data.Logic.Propositional.Core,
                    Data.Logic.Propositional.Parser,
                    Data.Logic.Propositional.Tables

Executable hatt
  Hs-Source-Dirs:   src
  Main-Is:          hatt.hs
  GHC-options:      -Wall
  Build-depends:    base           >= 4 && < 5,
                    cmdargs        >= 0.7,
                    containers     >= 0.3 && < 0.5,
                    parsec         >= 2.1 && < 2.2,
                    ansi-wl-pprint >= 0.6 && < 0.7,
                    haskeline      >= 0.6 && < 0.7
