Name:               hatt
Version:            1.5.0.3

Synopsis:           A truth table generator for classical propositional logic.
Description:        Hatt is a command-line program which prints truth tables
                    for expressions in classical propositional logic, and a
                    library allowing its parser, evaluator and truth table
                    generator to be used in other programs. It includes support
                    for converting logical expressions into several normal
                    forms.
License:            BSD3
License-file:       LICENSE
Author:             Benedict Eastaugh
Maintainer:         benedict@eastaugh.net
Copyright:          (c) 2012 Benedict Eastaugh
Homepage:           http://extralogical.net/projects/hatt
Category:           Logic
Cabal-version:      >= 1.8

Build-type:         Simple
Extra-source-files: README.md,
                    CHANGELOG

Source-repository head
  Type:             git
  Location:         git://github.com/beastaugh/hatt.git

Library
  Hs-Source-Dirs:   src
  GHC-options:      -Wall
  Build-depends:    base           >= 4 && < 5,
                    containers     >= 0.3 && < 0.6,
                    parsec         >= 2.1 && < 3.2,
                    QuickCheck     >= 2.4,
                    ansi-wl-pprint >= 0.6 && < 0.7
  Exposed-modules:  Data.Logic.Propositional,
                    Data.Logic.Propositional.Tables,
                    Data.Logic.Propositional.NormalForms
  Other-modules:    Data.Logic.Propositional.Core,
                    Data.Logic.Propositional.Parser

Executable hatt
  Main-Is:          src/hatt.hs
  GHC-options:      -Wall
  Build-depends:    base           >= 4 && < 5,
                    hatt,
                    cmdargs        >= 0.7,
                    haskeline      >= 0.6

Test-Suite test-hatt
  Type:             exitcode-stdio-1.0
  Main-is:          test/main.hs
  GHC-options:      -Wall
  Build-depends:    base           >= 4 && < 5,
                    hatt,
                    test-framework >= 0.4.1,
                    test-framework-quickcheck2
